Figured out how to move styles into the global stylesheet

--- a/app/assets/stylesheets/customized-components.css.scss
+++ b/app/assets/stylesheets/customized-components.css.scss
@@ -13,15 +13,15 @@
         }
 */
 
-paper-button {
-  background: #3e50b4;
-  color: white;
-
-  &[dismissive] {
-    background: grey;
-  }
-
-}
+//paper-button {
+//  background: #3e50b4;
+//  color: white;
+//
+//  &[dismissive] {
+//    background: grey;
+//  }
+//
+//}
 
 /* boiler plate pages, home and about */
 
@@ -56,8 +56,8 @@ section.boiler-plate {
 
 /* menu */
 
-core-menu.main-menu {
-  core-item {
-    a { font-family: $default_font; }
-  }
-}
+//core-menu.main-menu {
+//  core-item {
+//    a { font-family: $default_font; }
+//  }
+//}
