--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 
     <title>The Open Journal</title>
 
-    <%= stylesheet_link_tag    "application", media: "all"%>
+    <%= stylesheet_link_tag    "application", media: "all", :'shim-shadowdom'=>'' %>
     <%= html_import_tag "application" %>
 
     <%= javascript_include_tag "application" %>
