Make review icons a bit more visible

--- a/app/assets/components/ui-elements/oj-reviewer-annotation-controls.html
+++ b/app/assets/components/ui-elements/oj-reviewer-annotation-controls.html
@@ -29,6 +29,9 @@
         paper-icon-button::shadow #icon {
           width: 16px;
           height: 16px;
+          color: white;
+          stroke: black;
+          stroke-width: 1px;
         }
 
       </style>
