Basic markers in the document

--- a/app/assets/components/polymer-components.html
+++ b/app/assets/components/polymer-components.html
@@ -4,6 +4,7 @@
 
  *= require polymer/polymer
  *= require core-ajax/core-ajax
+ *= require core-iconset-svg/core-iconset-svg
  *= require core-scaffold/core-scaffold
  *= require core-toolbar/core-toolbar
  *= require core-collapse/core-collapse
@@ -11,6 +12,7 @@
  *= require core-icon/core-icon
  *= require core-list/core-list
  *= require core-menu/core-menu
+
  *= require paper-toast/paper-toast
  *= require paper-icon-button/paper-icon-button
  *= require paper-shadow/paper-shadow
