--- a/app/assets/components/ui-elements/markdown-text-area.html
+++ b/app/assets/components/ui-elements/markdown-text-area.html
@@ -12,7 +12,7 @@
         <paper-autogrow-textarea id=autogrow rows=3 maxRows=12>
           <textarea class='niceTextArea' placeholder={{placeholder}} id=input value={{value}}></textarea>
         </paper-autogrow-textarea>
-        <a href='#' class=toggle on-click="{{showPreview}}">Show preview</a>
+        <a href='#' class=toggle on-click="{{showPreview}}">Show Preview</a>
       </div>
 
     </div>
