--- a/app/assets/components/ui-elements/oj-annotation-list.html
+++ b/app/assets/components/ui-elements/oj-annotation-list.html
@@ -3,19 +3,15 @@
     <div layout vertical flex id=list>
 
       <template repeat="{{annotation in annotations}}">
-        <oj-annotation paper={{paper}} annotation={{annotation}}
+        <oj-annotation paper={{paper}}
+                       annotation={{annotation}}
                        style="top:{{annotation.top}}px"
                        on-annotation-opened={{annotationOpened}}
+                       on-annotation-closed={{annotationClosed}}
+                       on-annotation-added={{annotationAdded}}
                 ></oj-annotation>
       </template>
 
-      <oj-new-annotation id=new_annotation
-                         paper={{paper}}
-                         text={{newText}}
-                         on-annotation-opened={{annotationOpened}}
-                         on-annotation-added={{newAnnotationAdded}}
-              ></oj-new-annotation>
-      </template>
     </div>
 
     <style>
@@ -28,7 +24,7 @@
   </template>
   <script>
     Polymer({
-      collapsedAnnotationHeight: 66,
+      collapsedAnnotationHeight: 50,
       pageHeight: 0,
 
       created: function() {
@@ -77,9 +73,13 @@
           for (var i=0; i<annotations.length; i++) {
               var a = annotations[i];
               var top = this.topForAnnotation(a);
-              if (top < last) top = last;
+
+              if (!a.new) {
+                  if (top < last) top = last;
+                  last = top + this.collapsedAnnotationHeight;
+              }
+
               a.top = top;
-              last = top + this.collapsedAnnotationHeight;
           }
       },
       newAnnotationAdded:function(event, annotation){
@@ -101,16 +101,23 @@
       annotationOpened: function(event, element) {
         this.collapseAnnotations(element);
       },
+      annotationClosed: function(event, element) {
+        if (element.annotation.new) {
+            var index = this.annotations.indexOf(element.annotation);
+            if (index >= 0)
+                this.annotations.splice(index, 1);
+        }
+      },
+      annotationAdded: function(event, annotation) {
+          var last = this.annotations.length-1;
+          this.annotations[last] = annotation;
+      },
       collapseAnnotations: function(exclude) {
           var annotations = this.$.list.querySelectorAll('oj-annotation');
           [].forEach.call( annotations, function(annotation) {
              if (annotation != exclude)
                 annotation.close();
           });
-
-          var new_annotation = this.$.list.querySelector('oj-new-annotation');
-          if (new_annotation && new_annotation != exclude)
-              new_annotation.close();
       },
       startNewAnnotation: function(location) {
         var top = this.topForAnnotation(location);
