--- a/app/assets/components/ui-elements/oj-annotation-marker.html
+++ b/app/assets/components/ui-elements/oj-annotation-marker.html
@@ -10,6 +10,7 @@
           core-icon {
             stroke-width: 2px;
             transition:   all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.575);
+            cursor:       pointer;
           }
           core-icon.closed {
             height:       8px;
@@ -39,8 +40,8 @@
               stroke:       #a42d25;
           }
           core-icon.state-new {
-              fill: #ffffa0 !important;
-              stroke:       #f8f800;
+              fill:    #e0e0a0 !important;
+              stroke:  #e0e000;
           }
 
     </style>
